fix: Modifying React code in the Checkout page and modified the wraper class for wraper-login in LoginForm.css and LoginForm.jsx

--- a/src/pages/LoginForm/LoginForm.css
+++ b/src/pages/LoginForm/LoginForm.css
@@ -1,4 +1,4 @@
-.wrapper {
+.wrapper-login {
     font-family: Poppins-Medium;
     font-size: 20px;
     font-weight: 300;
@@ -8,7 +8,7 @@
     padding: 30px 40px;
     margin: 0 auto;
 }
-.wrapper .input-box {
+.wrapper-login .input-box {
     position: relative;
     width: 100%;
     height: 50px;
@@ -37,7 +37,7 @@
     transform: translateY(-50%);
     font-size: 16px;
 }
-.wrapper .remember-forgot {
+.wrapper-login .remember-forgot {
     display: flex;
     justify-content: space-between;
     font-size: 14.5px;
@@ -55,7 +55,7 @@
 .remember-forgot a:hover {
     text-decoration: underline;
 }
-.wrapper button {
+.wrapper-login button {
     width: 100%;
     height: 45px;
     background-color: #717FE0;
@@ -67,7 +67,7 @@
     color: #FFFFFF;
     font-weight: 700;
 }
-.wrapper .register-link {
+.wrapper-login .register-link {
     font-size: 14.5px;
     text-align: center;
     margin-top: 20px 0 15px;
